traversal.snake.Snake.scala.error
Compilation error:
Snake:32: error: illegal start of simple expression
  } esle if (getDirection() == Direction.EST){
         ^